fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,5 @@ input::first-letter {
   font-size: 20px;
   color:brown;
   font-weight: bold;
-  padding-left: 20px;
-  padding-right: 200px;
   text-align: justify;
 }
